[package]
name = "jollyexec"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
bytes = "1.6.0"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tempfile = "3.10.1"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
